Release safe received-PDF optimization